# CrocobyGraph

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
.github/workflows/: cxx_build.yml
cmake/: enttConfig.cmake  imguiConfig.cmake  incbinConfig.cmake  raylibConfig.cmake  rlImguiConfig.cmake
include/: CrocobyGraph.hpp  color.hpp  entities.hpp  entities_batch.hpp  layout.hpp  position.hpp
include/crocobygraph/: ecs.hpp  graphs.hpp  physics.hpp  visual.hpp
src/: basic_ui_frames.cpp  basic_ui_frames.hpp  batch.hpp  color.cpp  color.hpp  components.hpp  config.hpp  decompose.cpp  decompose.hpp  ecs.cpp  ecs.hpp  editor_frame.cpp  editor_frame.hpp  entities.hpp  entities_batch.cpp  entities_batch.hpp  layout.hpp  math.cpp  math.hpp  mylib.cpp  neural_network.hpp  painter.cpp  painter.hpp  physics.cpp  physics.hpp  physics_frame.hpp  physics_system.cpp  physics_system.hpp  position.hpp  scene.cpp  scene.hpp  systems.hpp  window.cpp  window.hpp  window_system.cpp  window_system.hpp
src/interface/: batch.cpp  batch.hpp  color.cpp  color.hpp  components.hpp  decompose.cpp  ecs.cpp  editor_frame.cpp  entities.hpp  layout.hpp  neural_network.hpp  physics_frame.cpp  physics_system.cpp  physics_system.hpp  scene.cpp  scene.hpp  systems.hpp  window_system.cpp  window_system.hpp
src/internal/: math.cpp  math.hpp  painter.cpp  painter.hpp  physics.cpp  physics.hpp  window.cpp  window.hpp
src/resources/: editor_icons.cpp  editor_icons.hpp  memory.hpp  open_sans.cpp  open_sans.hpp
